WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152572
FTL B3 should know that used registers are not the same thing as used registers. Rename the latter to unavailable registers to avoid future confusion.
https://bugs.webkit.org/show_bug.cgi?id=152572
Summary
FTL B3 should know that used registers are not the same thing as used registe...
Filip Pizlo
Reported
2015-12-27 19:03:56 PST
Patch forthcoming.
Attachments
the patch
(8.97 KB, patch)
2015-12-27 19:15 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-12-27 19:15:35 PST
Created
attachment 267947
[details]
the patch
Saam Barati
Comment 2
2015-12-28 12:53:24 PST
Comment on
attachment 267947
[details]
the patch r=me
Filip Pizlo
Comment 3
2015-12-28 14:48:24 PST
Landed in
http://trac.webkit.org/changeset/194431
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug