Source/JavaScriptCore/b3/B3StackmapGenerationParams.cpp
@@ -41,6 +41,18 @@ const RegisterSet& StackmapGenerationParams::usedRegisters() const
     return m_value->m_usedRegisters;
 }
 
+RegisterSet StackmapGenerationParams::unavailableRegisters() const
+{
+    RegisterSet result = usedRegisters();
+    
+    RegisterSet unsavedCalleeSaves = RegisterSet::vmCalleeSaveRegisters();
+    for (const RegisterAtOffset& regAtOffset : m_context.code->calleeSaveRegisters())
+        unsavedCalleeSaves.clear(regAtOffset.reg());
+
+    result.merge(unsavedCalleeSaves);
+    return result;
+}
+
 Procedure& StackmapGenerationParams::proc() const
 {
     return m_context.code->proc();
